added years, added logo

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 					</ul>
         		</li>
         	</ul>
-        	<!-- <img class="logo" src="images/logo.svg">	 -->
-	    	<h1><a href="index.html">&nbspChapter Zer0</a></h1>
+	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
     		<button>SUBSCRIBE</button>    		
 	    </nav>
 
@@ -40,6 +39,7 @@
 	</header>
 
 	<nav class="desktop-nav">
+        <img class="logo" src="images/logo.svg">	
     	<h1><a href="index.html">Chapter Zero</a></h1>
     	<button>SUBSCRIBE</button>
     	<ul>
@@ -68,7 +68,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<a href="story.html"><h3>She&rsquo;s Out Of Her Mind</h3></a>
+					<a href="story.html"><h3 class="story-title">She&rsquo;s Out Of Her Mind</h3></a>
+					<h5 class="year">2001</h5>
 					<br>
 					<br>
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
@@ -92,7 +93,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Happy Hearts Feel Pain</h3>
+					<h3 class="story-title">Happy Hearts Feel Pain</h3>
+					<h5 class="year">1999</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -108,7 +110,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>A Day In The Life Of Echo</h3>
+					<h3 class="story-title">A Day In The Life Of Echo</h3>
+					<h5 class="year">2011</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -124,7 +127,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Strange Bedfellows</h3>
+					<h3 class="story-title">Strange Bedfellows</h3>
+					<h5 class="year">2005</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -150,7 +154,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>A Day In The Life Of Echo</h3>
+					<h3 class="story-title">A Day In The Life Of Echo</h3>
+					<h5 class="year">2011</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -166,7 +171,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Strange Bedfellows</h3>
+					<h3 class="story-title">Strange Bedfellows</h3>
+					<h5 class="year">2005</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -182,7 +188,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Changing Rooms</h3>
+					<h3 class="story-title">Changing Rooms</h3>
+					<h5 class="year">1979</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -198,7 +205,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Our Bodies In Light</h3>
+					<h3 class="story-title">Our Bodies In Light</h3>
+					<h5 class="year">2010</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -214,7 +222,8 @@
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
-					<h3>The Unsinkable Ship</h3>
+					<h3 class="story-title">The Unsinkable Ship</h3>
+					<h5 class="year">1997</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -230,7 +239,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>THERE'S BURGERS HERE</h3>
+					<h3 class="story-title">There's Burgers Here</h3>
+					<h5 class="year">2016</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -259,7 +269,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Changing Rooms</h3>
+					<h3 class="story-title">Changing Rooms</h3>
+					<h5 class="year">1978</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -275,7 +286,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Our Bodies In Light</h3>
+					<h3 class="story-title">Our Bodies In Light</h3>
+					<h5 class="year">2010</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -291,7 +303,8 @@
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
-					<h3>The Unsinkable Ship</h3>
+					<h3 class="story-title">The Unsinkable Ship</h3>
+					<h5 class="year">1997</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -307,7 +320,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>There's Burgers Here</h3>
+					<h3 class="story-title">There's Burgers Here</h3>
+					<h5 class="year">2016</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -323,7 +337,8 @@
 					<img class="icon" src="images/book.svg">
 					<p>BOOK</p>
 					<br>
-					<h3>Catch Me If You Can</h3>
+					<h3 class="story-title">Catch Me If You Can</h3>
+					<h5 class="year">2000</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -339,7 +354,8 @@
 					<img class="icon" src="images/film.svg">
 					<p>FILM</p>
 					<br>
-					<h3>New Friends</h3>
+					<h3 class="story-title">New Friends</h3>
+					<h5 class="year">2007</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -355,7 +371,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Locking Horns</h3>
+					<h3 class="story-title">Locking Horns</h3>
+					<h5 class="year">2002</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
@@ -371,7 +388,8 @@
 					<img class="icon" src="images/tv.svg">
 					<p>TV</p>
 					<br>
-					<h3>Missing Mother</h3>
+					<h3 class="story-title">Missing Mother</h3>
+					<h5 class="year">2015</h5>
 					<br>
 					<br>
 					<img class="more" src="images/arrow.svg">
