--- a/story.html
+++ b/story.html
@@ -37,6 +37,7 @@
 	</header>
 
 	<nav class="desktop-nav">
+        <img class="logo" src="images/logo.svg">	
     	<h1><a href="index.html">Chapter Zero</a></h1>
     	<button>SUBSCRIBE</button>
     	<ul>
