fixed spacing issues in card layout

--- a/story.html
+++ b/story.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Chapter Zero</title>
+	<title>Chapter Zero | Story</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
@@ -9,6 +9,7 @@
     <script src="js/modernizr.js"></script>
     <script src="https://use.typekit.net/xsz5hca.js"></script>
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+	<link rel="icon" type="image/png" href="images/zero.png">
 </head>
 
 <body>
