--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
 	    	<h1><a href="index.html">&nbspChapter Zero</a></h1>
     		<button>SUBSCRIBE</button>    		
 	    </nav>
+		
+		<span class="info-more"><a href="#nothing"><img class="info" src="images/info.svg"></a></span>
+		<!-- <div class="info-backdrop">
+			<div class="info-modal">
+				<a href="#nothing" class="hide-info">X</a>
+				<p class="info-blurb">Chapter Zero is a curated site for the best of the best in fan-fiction. This is a place for readers to enjoy new stories based around their favorite characters. Our team of avid fan-fiction readers select the most interesting and original stories every week. Find out how to get your story published <a class="link" href="#">here.</a></p>
+			</div>
+		</div> -->
 
-	    <span class="show-info"><a href="#nothing"><img class="info" src="images/info.svg"></a></span>
 	</header>
 
 	<nav class="desktop-nav">
@@ -72,6 +79,7 @@
 					<h5 class="year">2001</h5>
 					<br>
 					<br>
+
 					<span class="show-more"><a href="#nothing"><img class="more" src="images/arrow.svg"></a></span>
 
 					<div class="modal-backdrop">
@@ -81,7 +89,7 @@
 						</div>
 					</div>
 
-				</div></a>
+				</div>
 			</div>
 
 			<div class="cover cover-max">
